Deploy prep + feature complete (Day 4-7)
Frontend: OutdoorPage, ProfilePage, LandingPage, Dashboard teaser,
Navbar update, HealthTipsCard, TodayHighlights, DecisionToolCard,
useDecisionEngine, axios env var, vercel.json SPA routing,
tailwind animate-fade-in, profileStore (Zustand persist).

Backend: application.yaml env var placeholders (DB_URL, DB_USERNAME,
DB_PASSWORD, JWT_SECRET, PORT). SecurityConfig CORS from env var.